--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
-        <!---->
+        <!-- hbase hdfs-->
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
@@ -59,7 +59,8 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.4</version>
         </dependency>
-        <!---->
+
+        <!-- 发布restful 需要的依赖-->
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
