--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,10 +9,19 @@ hadoopUserName=root
 # # # # # # # # # # # # # # # # #
 # FTP                           #
 # # # # # # # # # # # # # # # # #
-FtpServer=master
+FtpServer=szhzvmlinux01.datalabchina.com
 FtpPort=21
-FtpName=hzf
-FtpPwd=123456789
+FtpName=feng
+FtpPwd=123456
 #
+#
+# 192.168.128.130
+# master
+#
+# 192.168.65.18
+# szhzvmlinux01.datalabchina.com
+#
+# 192.168.128.16
+# ashkvmlinux09.pataw.com
 
 
