--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,7 +9,7 @@ hadoopUserName=root
 # # # # # # # # # # # # # # # # #
 # FTP                           #
 # # # # # # # # # # # # # # # # #
-FtpServer=szhzvmlinux01.datalabchina.com
+FtpServer=master
 FtpPort=21
 FtpName=feng
 FtpPwd=123456
