--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,8 @@
 # # # # # # # # # # # # # # # # #
 # hadoop                        #
 # # # # # # # # # # # # # # # # #
-hadoopIP=master
-hadoopPort=8020
+hadoopIP=szhzvmlinux01.datalabchina.com
+hadoopPort=9000
 hadoopUserName=root
 #
 # # # # # # # # # # # # # # # # #
