--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,3 +11,4 @@ log4j.appender.A1=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.File=./clientLog.log
 log4j.appender.A1.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss,SSS} [%l]%n%m%n
+#log4j.logger.org=Error
