--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,21 @@
             <version>1.0.6</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
